feature: add index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         <title>Hello World</title>
     </head>
     <body>
-        <h1>Ilari, ilariê</h1>
-        <h2>oh-oh-oh</h2> <br>
+        <h1>Olá, sou o corpo</h1>
+        <h2>Sou o corpo</h2> <br>
         <ol>
             <h4>Lista de compras</h4>
                 <li><h6>Arroz</h6></li>
